syntax = "proto3";

option go_package = "./proto";

message BookRequest {
    string title = 1;
    string description = 2;
    uint32 quantity = 3;
    string cover = 4;
    uint32 author_id = 5;
}

message BookResponses {
    repeated BookResponse books = 1;
}

message BookResponse {
    uint32 id = 1;
    string title = 2;
    string description = 3;
    uint32 quantity = 4;
    string cover = 5;
    Author author = 6;
    string created_at = 7;
    string updated_at = 8;
    string deleted_at = 9;
}

message Author {
    uint32 id = 1;
    string name = 2;
    string created_at = 3;
    string updated_at = 4;
    string deleted_at = 5;
}

message SearchBook {
    string query = 1;
}

service Books {
    rpc CreateBook(BookRequest) returns (BookResponse);
    rpc GetAllBooks(SearchBook) returns (BookResponse);
}